1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Discrete2d.m ([Discrete2d -setDiscrete2d:toFile:]): Add protocol
	name to error message.
	
1998-07-15  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* space.h (_Discrete2d): Split Discrete2d into new and
	presentation interface.

	* Discrete2d.m ([Discrete2d -setDiscrete2d:toFile:], [Discrete2d
	-copyDiscrete2d:toDiscrete2d:, [Discrete2d
	-setDiscrete2dToDisplay:]): Confirm conformance to _Discrete2d
	(not Discrete2d).

	* Object2dDisplay.m ([Object2dDisplay -setDiscrete2dToDisplay:]):
	Likewise.
	
	* Value2dDisplay.m ([Value2dDisplay -setDiscrete2dToDisplay:]):
	Likewise.
	
	* Discrete2d.h: Include space.h
	(Discrete2d): Conform to _Discrete2d.

1998-07-09  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (INCLUDES): Add misc.

1998-07-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Discrete2d.m: Include misc.h instead of string.h.

1998-06-24  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LIBRARIES, libspace_a_SOURCES): Remove.

1998-06-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (lib_LTLIBRARIES, libspace_la_SOURCES,
	libspace_la_LDFLAGS, SRC, CURRENT, REVISION, AGE): New variables.
	Set *_SOURCES from SRC.

1998-06-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile: Remove.
	
1998-06-21  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am: New file.

1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* space.h: Add a module summary documentation tag.

1998-05-28  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Discrete2d.m: Include string.h.

1998-05-06  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* space.h (Discrete2d, Ca2d): Add phase tags, reorder in sync.
	(DblBuffer2d, Value2dDisplay, ConwayLife2d, Diffuse2d, Grid2d,
	Object2dDisplay, Int2dFiler): Add phase tags.
	(Value2dDisplay): Declare -createEnd.
	(Grid2d, Int2dFiler): Declare +createBegin.

	* Grid2d.m ([Grid2d +createBegin:]): Directly initialize
	overwriteWarnings to YES (not 1).